add crud to employe

--- a/LavageProject/.settings/org.eclipse.wst.common.component
+++ b/LavageProject/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="LavageProject">
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp/WEB-INF/lib"/>
         <property name="context-root" value="LavageProject"/>
         <property name="java-output-path" value="/LavageProject/build/classes"/>
     </wb-module>
